--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: gray;
 }
 
 @theme inline {
@@ -15,6 +15,13 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
+
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --background: #f3f4f6;
+    --foreground: #ededed;
+  }
+} */
 
 body {
   background: var(--background);
