--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --background: #f3f4f6;
     --foreground: #ededed;
   }
-} */
+}
 
 body {
   background: var(--background);
