--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,15 @@
 :root {
   --background: #ffffff;
   --foreground: gray;
+    color-scheme: light only;
+}
+
+html {
+  color-scheme: light;
+}
+
+body {
+  color-scheme: light;
 }
 
 @theme inline {
