--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,19 +5,38 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  color-scheme: light !important;
+  forced-color-adjust: none !important;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+html {
+   color-scheme: only light !important;
+   forced-color-adjust: none;
+  background: #efefef !important;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color-scheme: light !important;
+  background: #efefef !important;
+  /* color: gray !important; */
+  font-family: Arial, Helvetica, sans-serif !important;
 }
+
+header * {
+  color: #1f264d !important;
+  -webkit-text-fill-color: #1f264d !important;
+  filter: none !important;
+  -webkit-filter: none !important;
+  mix-blend-mode: normal !important;
+}
+
+@media (prefers-color-scheme: dark) {
+  header * {
+    color: #1f264d !important;
+    -webkit-text-fill-color: #1f264d !important;
+    filter: none !important;
+    -webkit-filter: none !important;
+    mix-blend-mode: normal !important;
+  }
+}
+/* REMOVA completamente qualquer @media (prefers-color-scheme) */
